Use WAR/Tomcat, support plugins, document setting memory